# Equity-Research-Agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  README_CN.md  docker-compose.yml  pyproject.toml  requirements.txt  run_demo.py  start_api.py  start_worker.py
src/real_finan/: __init__.py  agents.py  config.py  database.py  documents.py  graph.py  knowledge_store.py  llm.py  logging_utils.py  market_data.py  memory.py  queueing.py  reporting.py  service.py  state.py  tools.py  worker.py
src/real_finan/api/: __init__.py  app.py  schemas.py
src/real_finan/data/: __init__.py  sample_financial_data.py
static/: index.html
tests/: test_system.py
